--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <title>LOADING ANIMATION</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href=".idea/img/cake.png">
 </head>
 <body>
-    <div class="gif-cutie">
-        <img src="" alt="">
+    <div class="container">
+        <div class="gif-cutie">
+            <img src="https://media.tenor.com/bh9MAiCpL6wAAAAi/birthday-cake.gif" alt="">
+        </div>
+        <div class="loading-animation">
+            <h2>LOADING...</h2>
+    </div>
     </div>
 </body>
 </html>
