CAKE PROGRESS STIL GOING

--- a/CAKE.html
+++ b/CAKE.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BIRTHDAY CAKE</title>
     <link rel="stylesheet" href="CAKE.CSS">
-    <link rel="icon" href="">
+    <link rel="icon" href=".idea/img/cake.png">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="greetings">
+            <h2>HAPPY BIRTHDAY ANNIKA</h2>
+        </div>
+    </div>
 </body>
 </html>
