--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>LOADING ANIMATION</title>
+    <title>LOADING PAGE</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href=".idea/img/cake.png">
 </head>
