--- a/CAKE.html
+++ b/CAKE.html
@@ -1,39 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday Annika!</title>
-    <link rel="stylesheet" href="CAKE.CSS">
-    <link rel="icon" href=".idea/img/cake.png">
-    <script src="cake.js"></script>
-    <script src="toppings.js"></script>
+    <meta charset="UTF-8" />
+    <title>BIRTHDAY GIRL</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 </head>
 <body>
-    <h1>Happy Birthday Annika!</h1>
-
-    <div class="instructions-container" style="display:block;">
-        <p>Pick a choice between <button id="mic">Mic</button> or <button id="cursor">Cursor</button> to blow candle.</p>
+    <div class="candle-count-display">
+    HAPPY BIRTHDAY ANNIKA!
     </div>
-    <div id="instructions">
-        <p id="cursorInstructions">Swipe your cursor close to the flame to put it out.</p>
-        <p id="micInstructions">Blow on the flame to put it out.</p>
+    <div class="cake">
+    <div id="candleCount" style="display:none;"></div>
+    <div class="plate"></div>
+    <div class="layer layer-bottom"></div>
+    <div class="layer layer-middle"></div>
+    <div class="layer layer-top"></div>
+    <div class="icing"></div>
+    <div class="drip drip1"></div>
+    <div class="drip drip2"></div>
+    <div class="drip drip3"></div>
     </div>
-    
-    <div class="birthday-cake-container">
-        <div class="birthday-cake-top">
-            <div id="candle"></div>
-            <div id="flame"></div>
-        </div>
-        <div id="icing"></div>
-        <div id="birthday-cake"></div>
+    <div class="footer">
+        Developed By: YOSH &nbsp; | &nbsp; Made with <svg class="heart" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke=""><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="1.488"></g><g id="SVGRepo_iconCarrier"> <path d="M2 9.1371C2 14 6.01943 16.5914 8.96173 18.9109C10 19.7294 11 20.5 12 20.5C13 20.5 14 19.7294 15.0383 18.9109C17.9806 16.5914 22 14 22 9.1371C22 4.27416 16.4998 0.825464 12 5.50063C7.50016 0.825464 2 4.27416 2 9.1371Z" fill="#ff6999"></path> </g></svg>
     </div>
-
-    <div class="gift-container">
-        <h3>Blow the candle to earn your prize!</h3>
-        <div id="gift">
-            <img src="#[import image here]" id="img" alt="" width="100" height="100">
-        </div>
-    </div>
+    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.3.2"></script>
 </body>
 </html>
